--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Andrei Macavei",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.0"
